[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/enemies/witch_goblin_summoning_3.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/witch_goblin_1.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/witch_goblin_summoning_1.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/witch_goblin_summoning_2.png" type="Texture" id=4]
[ext_resource path="res://scripts/enemies/WitchGoblin.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/UI/healthbar_enemy_empty.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/healthbar_enemy_full.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/armorbar_empty.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/armorbar_colours.png" type="Texture" id=10]
[ext_resource path="res://assets/enemies/goblin_spear.png" type="Texture" id=11]
[ext_resource path="res://assets/misc/physical_armor.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "summoning",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.70644
height = 9.06714

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.21462
height = 9.06714

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 57.0278, 58.8172 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 173.529, 62.6087 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 28, 4 )
margin = Rect2( 1, 1, 1, 10 )

[node name="WitchGoblin" type="KinematicBody2D" groups=["Enemy"]]
scale = Vector2( 5, 5 )
collision_layer = 33
collision_mask = 162
script = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "summoning"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.749152, 3.74577 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.665064, 1.35944 )
shape = SubResource( 3 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -57.2233, 6.55462 )
shape = SubResource( 4 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 1.4, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 56.0786, 6.20924 )
shape = SubResource( 4 )

[node name="SummoningPos" type="Position2D" parent="."]
position = Vector2( -5.53167, -16.3303 )
scale = Vector2( 0.2, 0.2 )

[node name="SummoningTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -6.8, -1.8 )

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SummoningArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SummoningArea"]
position = Vector2( -1.23591, 2.34752 )
shape = SubResource( 5 )

[node name="LevelLabel" type="Label" parent="."]
margin_left = -15.0
margin_top = -118.0
margin_right = 41.0
margin_bottom = -86.0
custom_fonts/font = SubResource( 6 )
text = "Lv.1"
align = 1

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -46.6667
margin_top = -91.1667
margin_right = -16.6667
margin_bottom = -85.1666
rect_scale = Vector2( 4, 4 )
value = 100.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )

[node name="ArmorBar" type="TextureProgress" parent="."]
margin_left = -47.4633
margin_top = -67.3225
margin_right = -17.4633
margin_bottom = -61.3225
rect_scale = Vector2( 3.5, 2.75 )
value = 100.0
texture_under = ExtResource( 9 )
texture_progress = SubResource( 7 )

[node name="SpearSprite" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( -45, 15 )
rotation = -1.5708
scale = Vector2( 5, 5 )
texture = ExtResource( 11 )

[node name="SpearThrustAttackWarning" type="ColorRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.513726 )
margin_left = -112.0
margin_top = -45.0
margin_right = -48.0
margin_bottom = 53.0
color = Color( 1, 0.196078, 0, 1 )

[node name="ArmorSprite" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.490196 )
scale = Vector2( 6, 6 )
texture = ExtResource( 12 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Left" to="." method="_on_Left_area_entered"]
[connection signal="area_exited" from="Left" to="." method="_on_Left_area_exited"]
[connection signal="area_entered" from="Right" to="." method="_on_Right_area_entered"]
[connection signal="area_exited" from="Right" to="." method="_on_Right_area_exited"]
[connection signal="timeout" from="SummoningTimer" to="." method="_on_SummoningTimer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="area_entered" from="SummoningArea" to="." method="_on_SummoningArea_area_entered"]
